test_coord_new = executable('test_coord_new', 'test_coord_new.c',
                             include_directories : [inc, xs_inc],
                             link_with : xslib)
test('coord_new test', test_coord_new)

test_coord_interp_y = executable('test_coord_interp_y', 'test_coord_interp_y.c',
                             include_directories : [inc, xs_inc],
                             link_with : xslib)
test('coord_interp_y test', test_coord_interp_y)
